Changes: - dark mode => fixed glitch after reverting back

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,9 @@
     --dark_blue: #286ba2;
     --marine_blue: #2a6bcc;
     --dark_mode_blue: #0C1E3A;
+    --dark_mode_light_blue: #00F9FF;
+    --dark_mode_magenta: #FF01D3;
+    --dark_mode_pink: #E0DAED;
     --dark_mode_purple: #360D4B;
     --dark_grey: #333333;
     --dim_grey: #696969;
@@ -193,22 +196,103 @@ img {
     background: -webkit-linear-gradient(top left, #0C1E3A, #360D4B);
     background: -moz-linear-gradient(top left, #0C1E3A, #360D4B);
     background: linear-gradient(to bottom right, #0C1E3A, #360D4B);
-    color: var(--light_grey);
+    color: var(--dark_mode_pink);
+}
+.DarkMode_Homepage {
+    /*position: absolute;*/
+    /*right: 0;*/
 }
 
-.DarkMode {
-    position: relative;
-    width: 100%;
-}
-
-.darkMode-button-wrapper {
+.darkMode_container {
+    align-content: center;
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
     position: absolute;
-    right: 30px;
+    right: 0;
     top: 30px;
+    width: 160px;
 }
 
-.darkMode-button-wrapper button {
+.darkMode_toggle_wrapper label {
+    display: inline-block;
+    height: 44px;
+    position: relative;
+    width: 80px;
+}
+
+.darkMode_toggle_wrapper input {
+    height: 0;
+    opacity: 0;
+    width: 0;
+}
+
+.darkMode_toggle_wrapper input:checked + .slider:before {
+    transform: translateX(26px);
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+}
+
+.slider {
+    background-color: #ccc;
+    bottom: 0;
     cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: 0.4s;
+    -webkit-transition: 0.4s;
+}
+
+.slider_dark {
+    background: linear-gradient(to top left, #8664FF, #FF01D3 );
+}
+
+/*.slider:before {*/
+/*    background-color: white;
+/*    bottom: 4px;*/
+/*    content: "";*/
+/*    height: 20px;*/
+/*    left: 6px;*/
+/*    position: absolute;*/
+/*    transition: 0.4s;*/
+/*    width: 20px;*/
+/*    -webkit-transition: 0.4s;*/
+/*}*/
+
+.slider:before {
+    bottom: 8px;
+    content: url(img/day-mode.svg);
+    height: 28px;
+    left: 10px;
+    position: absolute;
+    transition: 0.4s;
+    width: 28px;
+    -webkit-transition: 0.4s;
+}
+
+.slider_dark:before {
+    bottom: 6px;
+    content: url(img/dark-mode-moon.svg);
+    height: 28px;
+    left: 18px;
+    position: absolute;
+    transition: 0.4s;
+    width: 24px;
+    -webkit-transition: 0.4s;
+}
+
+.round {
+    border-radius: 20px;
+}
+
+.round:before {
+    border-radius: 50%;
+}
+
+.darkMode_About {
+    background-color: red;
 }
 
 
@@ -238,11 +322,21 @@ img {
     width: 35vw;
 }
 
+.modal_content_dark {
+    background: #0C1E3A;
+    background: -webkit-linear-gradient(top left, #0C1E3A, #360D4B);
+    background: -moz-linear-gradient(top left, #0C1E3A, #360D4B);
+    background: linear-gradient(to bottom right, #0C1E3A, #360D4B);
+    color: var(--dark_mode_pink);
+}
+
 .modal_text {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 30px;
+    border-image-source: linear-gradient(to right, #4876fe, #FF01D3);
+
 }
 
 .modal_text h1 {
@@ -845,6 +939,11 @@ button {
     letter-spacing: 0.2rem;
 }
 
+.WeatherCurrent .sub_title_main_dark,
+.ForecastHeader .sub_title_main_dark {
+    color: var(--dark_mode_light_blue);
+}
+
 .ForecastHeader .sub_title_main {
     font-size: 1.6rem;
 }
@@ -1079,6 +1178,10 @@ button {
     font-weight: 300;
     letter-spacing: 0.1rem;
     position: relative;
+}
+
+.ForecastHeader .date_dark {
+    color: var(--dark_mode_light_blue);
 }
 
 .ForecastHeader .sub_title {
@@ -1477,6 +1580,10 @@ button {
 .footer_content p {
     color: var(--white);
     font-size: 1.2rem;
+}
+
+.footer_content_dark p {
+    color: var(--dark_mode_pink);
 }
 
 
